apps/traefik/dashboard/middleware-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-proxy
spec:
  basicAuth:
    secret: traefik-dashboard-auth
