apps/traefik/dashboard/ingress-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-proxy
  annotations:
    gethomepage.dev/href: "https://traefik.denniscloud.io"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Reverse Proxy
    gethomepage.dev/group: Services
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/app: traefik
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: "traefik"
    gethomepage.dev/widget.url: "https://traefik.denniscloud.io"
    gethomepage.dev/widget.username: "dennis"
    gethomepage.dev/widget.password: "DennisTraefik2024"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.denniscloud.io`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik-proxy
      services:
        - name: api@internal
          kind: TraefikService
  tls:
      secretName: traefik-web-ui-tls
